Fixed spacing on mobile

--- a/style.css
+++ b/style.css
@@ -359,7 +359,7 @@ article#main-col-contact {
   }
 
   #showcase-spacer {
-    display: none;
+    padding: 10%;
   }
 
   #showcase h1 {
